--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="mynavbar">
         <div class="navbar-left">
-            <img src="resources/oceanj-logo.png" alt="">
+            <img src="oceanj-logo.png" alt="">
         </div>
         <div class="nav-right">
             <div class="nav-right-items">
@@ -192,7 +192,7 @@
                 <h3>JOIN OUR NEWSLETTER</h3>
                 <input type="email" name="" value="" placeholder="Email" />
                 <div class="img-div">
-                    <img src="resources/oceanj-logo-vertical.png" alt="">
+                    <img src="oceanj-logo-vertical.png" alt="">
                 </div>
             </div>
         </div>
