--- a/jewellery.html
+++ b/jewellery.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="col-md-2 cat-jewellery">
-        <img src="img/beaded earrings.jpg" class="img-thumbnail h-50" alt="beaded earrings">
+        <img src="beaded earrings.jpg" class="img-thumbnail h-50" alt="beaded earrings">
         <p class="text-center">
             EDBLAD Dottie Earings
         </p>
@@ -20,7 +20,7 @@
     </div>
 
     <div class="col-md-2 cat-accessories cat-jewellery cat-offers">
-        <img src="img/beaded necklace.jpg" class="img-thumbnail h-50" alt="beaded necklace ">
+        <img src="beaded necklace.jpg" class="img-thumbnail h-50" alt="beaded necklace ">
         <p class="text-center ">
             Tutti Long Heart Connector Necklace
         </p>
