--- a/offers.html
+++ b/offers.html
@@ -11,7 +11,7 @@
 <body>
     <div class="row row-cols-md-12">
         <div class="col-md-2 cat-accessories cat-personal-shopping cat-offers">
-            <img src="img/bagpack.jpg" class="img-thumbnail h-50" alt="bagpack">
+            <img src="bagpack.jpg" class="img-thumbnail h-50" alt="bagpack">
             <p class="text-center">
                 Bessie London Faux Leather Handbag - Tan
             </p>
@@ -20,7 +20,7 @@
             </p>
         </div>
         <div class="col-md-2 cat-accessories cat-jewellery cat-offers">
-            <img src="img/beaded necklace.jpg" class="img-thumbnail h-50" alt="beaded necklace ">
+            <img src="beaded necklace.jpg" class="img-thumbnail h-50" alt="beaded necklace ">
             <p class="text-center ">
                 Tutti Long Heart Connector Necklace
             </p>
@@ -29,7 +29,7 @@
             </p>
         </div>
         <div class="col-md-2 cat-accessories cat-offers">
-            <img src="img/watch2.jpg" class="img-thumbnail h-50" alt="watch2">
+            <img src="watch2.jpg" class="img-thumbnail h-50" alt="watch2">
             <p class="text-center ">
 
                 Anaii Pink 'Kensington' Ladies Watch
