--- a/personal shopping.html
+++ b/personal shopping.html
@@ -11,7 +11,7 @@
 <body>
     <div class="row row-cols-md-12">
         <div class="col-md-2 cat-accessories cat-personal-shopping cat-offers">
-            <img src="img/bagpack.jpg" class="img-thumbnail h-50" alt="bagpack">
+            <img src="bagpack.jpg" class="img-thumbnail h-50" alt="bagpack">
             <p class="text-center">
                 Bessie London Faux Leather Handbag - Tan
             </p>
@@ -20,7 +20,7 @@
             </p>
         </div>
         <div class="col-md-2 cat-personal-shopping">
-            <img src="img/santa hat.jpg" class="img-thumbnail h-50" alt="santa hat">
+            <img src="santa hat.jpg" class="img-thumbnail h-50" alt="santa hat">
             <p class="text-center ">
                 Terry Trees Scarf - Navy
             </p>
@@ -29,7 +29,7 @@
             </p>
         </div>
         <div class="col-md-2 cat-accessories cat-personal-shopping">
-            <img src="img/watch3.jpg" class="img-thumbnail h-50" alt="watch3">
+            <img src="watch3.jpg" class="img-thumbnail h-50" alt="watch3">
             <p class="text-center ">
 
                 Gail Klevan Cufflinks
