--- a/accessories.html
+++ b/accessories.html
@@ -11,7 +11,7 @@
 <body>
     <div class="row row-cols-md-12">
         <div class="col-md-2 cat-accessories cat-personal-shopping cat-offers">
-            <img src="img/bagpack.jpg" class="img-thumbnail h-50" alt="bagpack">
+            <img src="bagpack.jpg" class="img-thumbnail h-50" alt="bagpack">
             <p class="text-center">
                 Bessie London Faux Leather Handbag - Tan
             </p>
@@ -20,7 +20,7 @@
             </p>
         </div>
         <div class="col-md-2 cat-accessories cat-jewellery cat-offers">
-            <img src="img/beaded necklace.jpg" class="img-thumbnail h-50" alt="beaded necklace ">
+            <img src="beaded necklace.jpg" class="img-thumbnail h-50" alt="beaded necklace ">
             <p class="text-center ">
                 Tutti Long Heart Connector Necklace
             </p>
@@ -30,7 +30,7 @@
         </div>
 
         <div class="col-md-2 cat-accessories ">
-            <img src="img/earrings.jpg" class="img-thumbnail h-50" alt="earrings">
+            <img src="earrings.jpg" class="img-thumbnail h-50" alt="earrings">
             <p class="text-center ">
                 Coeur de Lion Earrings - Haematite & Rhinestone
             </p>
@@ -40,7 +40,7 @@
         </div>
 
         <div class="col-md-2 cat-accessories">
-            <img src="img/trukishbracelet.jpg" class="img-thumbnail h-50" alt="turkishbracelet">
+            <img src="trukishbracelet.jpg" class="img-thumbnail h-50" alt="turkishbracelet">
             <p class="text-center ">
                 EDBLAD Skyline Bracelet
             </p>
@@ -49,7 +49,7 @@
             </p>
         </div>
         <div class="col-md-2 cat-accessories cat-offers">
-            <img src="img/watch2.jpg" class="img-thumbnail h-50" alt="watch2">
+            <img src="watch2.jpg" class="img-thumbnail h-50" alt="watch2">
             <p class="text-center ">
 
                 Anaii Pink 'Kensington' Ladies Watch
@@ -61,7 +61,7 @@
         </div>
 
         <div class="col-md-2 cat-accessories cat-personal-shopping">
-            <img src="img/watch3.jpg" class="img-thumbnail h-50" alt="watch3">
+            <img src="watch3.jpg" class="img-thumbnail h-50" alt="watch3">
             <p class="text-center ">
 
                 Gail Klevan Cufflinks
@@ -73,7 +73,7 @@
         </div>
 
         <div class="col-md-2 cat-accessories">
-            <img src="img/wayubag.jpg" class="img-thumbnail h-50" alt="wayubag">
+            <img src="wayubag.jpg" class="img-thumbnail h-50" alt="wayubag">
             <p class="text-center ">
                 Katie Loxton Purse
             </p>
@@ -83,7 +83,7 @@
         </div>
 
         <div class="col-md-2 cat-accessories">
-            <img src="img/watch.jpg" class="img-thumbnail h-50" alt="watch ">
+            <img src="watch.jpg" class="img-thumbnail h-50" alt="watch ">
             <p class="text-center ">
                 Dansk Orit Bracelet
             </p>
