--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/b7b6a6e3be.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -17,7 +18,7 @@
         </div>
         <div class="nav-right">
             <div class="nav-right-items">
-                <p>| MY ACCOUNT | MY BAG | CALL US - 01161331884</p>
+                <p><i class="fab fa-facebook-f"></i> <i class="fab fa-twitter"></i> <i class="fab fa-instagram"></i> <i class="fab fa-google-plus-g"></i> | MY ACCOUNT | MY BAG | CALL US - 01161331884</p>
                 <div class="search">
                     <input type="text" placeholder="Search.." />
                 </div>
@@ -175,9 +176,9 @@
             <div class="item-content">
                 <h3>SERVICES </h3>
                 <p>Delivery information</p>
-                <p>Shipping and return</p>
+                <p>Shipping and returns</p>
                 <p>Secure shopping</p>
-                <p>International</p>
+                <p>International Shipping</p>
             </div>
             <div class="item-content">
                 <h3>MY ACCOUNT</h3>
@@ -186,6 +187,7 @@
                 <p>Wish-list</p>
             </div>
             <div class="item-content">
+
                 <h3>SECURE PAYMENT</h3>
             </div>
             <div class="item-content item-four">
@@ -195,6 +197,9 @@
                     <img src="oceanj-logo-vertical.png" alt="">
                 </div>
             </div>
+        </div>
+        <div class="item-content item-five">
+            <p>|@Copyright 2015 Ocean Jewellery | Privacy policy | Website by Design 33</p>
         </div>
     </div>
 </body>
